services/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sblob
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sblob
  template:
    metadata:
      labels:
        app: sblob
    spec:
      containers:
        - name: sblob
          image: ghcr.io/kamuridesu/sblob:0.2.1
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 2
          resources:
            limits:
              cpu: "0.005"
              memory: "10Mi"
