services/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sblob-service
spec:
  selector:
    app: sblob
  ports:
    - port: 80
