services/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sblob-ingress
  namespace: sblob
spec:
  ingressClassName: haproxy
  rules:
    - host: kamuridesu.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sblob-service
                port:
                  number: 80
